# winsvc-manager

./: .gitignore  .versionrc  CHANGELOG.md  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  test_install.bat  test_service.bat  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-31-tauri-nssm-service-manager-plan.md
docs/superpowers/specs/: 2026-03-31-tauri-nssm-service-manager-design.md
scripts/: release.cjs  version-updater.cjs  version-updater.js
src/: App.vue  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  nssm.rs  service.rs
src/components/: InstallDialog.vue  ServiceList.vue  ServiceLogDialog.vue
