[package]
name = "winsvc-manager"
version = "0.0.1"
description = "Windows Service Manager using NSSM"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.tauri-winres]
FileDescription = "NSSM Service Manager"
ProductName = "winsvc-manager"
LegalCopyright = "Copyright (C) 2026"
OriginalFilename = "winsvc-manager.exe"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
